# SEMD_bot

./: .gitignore  README.md  Readme.md  config.py  env.example  main.py  pyproject.toml
.claude/: CLAUDE.md
.github/workflows/: deploy.yml  protect-master.yml
core/: bot.py  plugin_manager.py  scheduler.py
docs/: ARCHITECTURE_MERMAID.md  DEVELOPMENT_PLAN.md  PLAN_UPDATES.md  PLUGIN_DEVELOPMENT_GUIDE.md  PROXY_SETUP.md  ROOT_MENU_EXPLANATION.md  SECURITY_LOGGING.md  SEMD_REG_TRACKER_PLAN.md  SPRINT_ROADMAP.md  rest_api_fnsi.md
env/crts/: rosminzdrav.crt
handlers/: data.py  file_utils.py  fnsi.py  scrap.py  sql.py  stat.py
plugins/: base.py
plugins/admin_logs/: README.md  __init__.py  handlers.py  keyboards.py  plugin.py
plugins/nsi_update_checker/: README.md  data.py  formatters.py  handlers.py  keyboards.py  plugin.py
plugins/plugin_manager/: README.md  __init__.py  handlers.py  keyboards.py  plugin.py
plugins/root_menu/: README.md  __init__.py  handlers.py  keyboards.py  plugin.py
plugins/semd_checker/: README.md  __init__.py  handlers.py  keyboards.py  plugin.py  semd_logic.py
plugins/semd_reg_tracker/: README.md  formatters.py  handlers.py  plugin.py
plugins/statistics/: README.md  __init__.py  handlers.py  keyboards.py  plugin.py
scripts/: README.md  fetch_fnsi_cert.py  fetch_free_proxies.py  generate_test_data.py
services/: database_service.py  fnsi_client.py  proxy_utils.py
tests/: test_semd_checker.py
utils/: database.py  date_utils.py  file_utils.py  log_sanitizer.py  logging_setup.py  message_manager.py  text_formatters.py
(+10 files in other folders)
