[project]
name = "semd-bot"
version = "1.0.0"
description = "FNSI update monitoring. Check SEMD version"
authors = [
    {name = "Alexey Alepko",email = "AlepkoAA@mos.ru"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "pytelegrambotapi (>=4.29.1,<5.0.0)",
    "schedule (>=1.2.2,<2.0.0)",
    "tabulate (>=0.9.0,<0.10.0)",
    "pandas (>=2.3.2,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)"
]

[tool.poetry]
package-mode = false